--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h4>AIVY</h4>
       </div>
       <div>
-        <h4>anu@gmail.com</h4>
+        <h4>deepak@gmail.com</h4>
       </div>
     </nav>
     <div class="body1">
